fixed location select overflows

--- a/src/scss/_eventForm.scss
+++ b/src/scss/_eventForm.scss
@@ -24,10 +24,13 @@
 		margin-left: 15px;
 		padding: 0;
 		padding-top: 5px;
+		padding-right: 25px;
 		background-color: transparent;
 		border: none;
 		border-bottom: 1px solid $primaryLighten2;
 		border-radius: 0;
+		text-overflow: ellipsis;
+		white-space: nowrap;
 
 		input {
 			padding-left: 0;
@@ -56,8 +59,11 @@
 		}
 
 		.text {
+			width: 100%;
+			overflow: hidden;
 			font-size: 16px;
 			line-height: 32px;
+			text-overflow: ellipsis;
 		}
 	}
 	
